--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Doce-Code256 - Especialistas em landing pages, sites e portfólios profissionais. Criamos soluções digitais responsivas e acessíveis." />
-    <meta name="keywords" content="landing page, site, portfólio, desenvolvimento web, react, responsive" />
-    <title>Doce-Code256 - Criação de Sites e Landing Pages</title>
+    <meta name="description" content="Doce-Code256 - Criação de sites e landing pages profissionais para pequenos negócios. Transforme sua presença digital!" />
+    <meta name="keywords" content="criação de sites, landing pages, desenvolvimento web, sites profissionais, pequenos negócios" />
+    <title>Doce-Code256 - Sites que Vendem, Negócios que Crescem</title>
   </head>
   <body>
     <div id="root"></div>
